Bug 707045: Convert some ascii control characters to spaces.

Tabs, newlines, etc.